# azure-devops-python-package-using-poetry

./: LICENSE  README.md  azure-pipelines.yml  pyproject.toml
tests/: test_azops.py
