[tool.poetry]
name = "azops"
version = "0.0.0"
description = ""
authors = ["Daisuke Kobayashi <daisuke@daisukekobayashi.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enalbe = true
style = "pep404"
metadata = false
